--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@
 
 [env:esp32-c3-devkitc-02]
 platform = espressif32
-board = esp32-c3-devkitc-02
+board = esp32dev
 framework = arduino
 lib_deps = milesburton/DallasTemperature@^4.0.6
+monitor_speed = 115200
